--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "mongodb": "^3.0.7",
+    "mongoose": "^5.0.17",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.3"
   }
