--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.17",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.5",
     "nodemon": "^1.17.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
