--- a/client/package.json
+++ b/client/package.json
@@ -1,31 +1,25 @@
 {
-    "name": "client",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "axios": "^0.18.0",
-        "isomorphic-fetch": "^2.2.1",
-        "node-sass-chokidar": "^1.2.2",
-        "npm-run-all": "^4.1.2",
-        "react": "^16.3.2",
-        "react-dom": "^16.3.2",
-        "react-redux": "^5.0.7",
-        "react-router-config": "^1.0.0-beta.4",
-        "react-router-dom": "^4.2.2",
-        "react-scripts": "1.1.4",
-        "redux": "^4.0.0",
-        "redux-devtools-extension": "^2.13.2",
-        "redux-logger": "^3.0.6",
-        "redux-thunk": "^2.2.0"
-    },
-    "scripts": {
-        "build-css": "node-sass-chokidar src/ -o src/",
-        "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-        "start-js": "react-scripts start",
-        "start": "npm-run-all -p watch-css start-js",
-        "build-js": "react-scripts build",
-        "build": "npm-run-all build-css build-js",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
-    }
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "axios": "^0.18.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
+    "react-redux": "^5.0.7",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "react-snapshot": "^1.3.0",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build && react-snapshot",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
