--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "d3-fetch": "^1.1.2",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
+    "query-string": "^6.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
