--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "query-string": "^6.2.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.1.0",
     "react-redux": "^5.0.7",
@@ -20,7 +20,9 @@
     "react-snapshot": "^1.3.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-saga": "^0.16.2",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
