--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
+    "ramda": "^0.26.1",
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2",
     "react-helmet": "^5.2.0",
